improvement_3665
Signed-off-by: Heinrich Weichert <heinrich.weichert@avl.com>