@@ -14,12 +14,13 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.UUID;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 
 import org.apache.log4j.Logger;
 import org.eclipse.lsp4j.Diagnostic;
 import org.eclipse.lsp4j.TextEdit;
+import org.eclipse.lsp4j.WorkspaceEdit;
 import org.eclipse.xtext.ide.server.codeActions.ICodeActionService2.Options;
 
 import com.google.common.annotations.Beta;
@@ -27,24 +28,28 @@ import com.google.common.base.Strings;
 import com.google.inject.Inject;
 import com.google.inject.Provider;
 
+import jakarta.inject.Singleton;
+
 /**
  * @author Heinrich Weichert
  *
  * @since 2.24
  */
 @Beta
+@Singleton
 public class AbstractDeclarativeIdeQuickfixProvider implements IQuickFixProvider {
 
 	private static final Logger LOG = Logger.getLogger(AbstractDeclarativeIdeQuickfixProvider.class);
 
-	private Map<String, List<Method>> methods = new ConcurrentHashMap<>();
-	
+	private final Map<String, List<Method>> methods = new ConcurrentHashMap<>();	
+	private final Map<String, DiagnosticResolution> resolutionIds = new ConcurrentHashMap<>();
+
 	@Inject
 	private Provider<DiagnosticResolutionAcceptor> issueResolutionAcceptorProvider;
 
 	private boolean getFixMethodPredicate(Method input, String issueCode) {
 		for (QuickFix annotation : input.getAnnotationsByType(QuickFix.class)) {
-			boolean result = annotation != null && Objects.equals(issueCode,annotation.value())
+			boolean result = annotation != null && Objects.equals(issueCode, annotation.value())
 					&& input.getParameterTypes().length == 1 && Void.TYPE == input.getReturnType()
 					&& input.getParameterTypes()[0].isAssignableFrom(DiagnosticResolutionAcceptor.class);
 			if (result) {
@@ -70,25 +75,25 @@ public class AbstractDeclarativeIdeQuickfixProvider implements IQuickFixProvider
 
 	private List<Method> collectMethods(Class<? extends AbstractDeclarativeIdeQuickfixProvider> clazz,
 			String issueCode) {
-		return Arrays.stream(clazz.getMethods()).filter(method -> getFixMethodPredicate(method, issueCode))
-				.collect(Collectors.toList());
+		return Arrays.stream(clazz.getMethods()).filter(method -> getFixMethodPredicate(method, issueCode)).toList();
 	}
 
 	@Override
 	public boolean handlesDiagnostic(Diagnostic diagnostic) {
-		return !getFixMethods(diagnostic).isEmpty();		
+		return !getFixMethods(diagnostic).isEmpty();
 	}
 
 	public List<Method> getFixMethods(Diagnostic diagnostic) {
-		if (diagnostic == null || diagnostic.getCode() == null || diagnostic.getMessage() == null || diagnostic.getSeverity() == null) {
+		if (diagnostic == null || diagnostic.getCode() == null || diagnostic.getMessage() == null
+				|| diagnostic.getSeverity() == null) {
 			return Collections.emptyList();
 		}
 		String issueCode = diagnostic.getCode().getLeft();
 		if (Strings.isNullOrEmpty(issueCode)) {
 			return Collections.emptyList();
 		}
-		
-		return methods.computeIfAbsent(issueCode, c -> this.collectMethods(getClass(), c));		
+
+		return methods.computeIfAbsent(issueCode, c -> this.collectMethods(getClass(), c));
 	}
 
 	/**
@@ -104,5 +109,18 @@ public class AbstractDeclarativeIdeQuickfixProvider implements IQuickFixProvider
 	 */
 	protected List<TextEdit> createTextEdit(Diagnostic diagnostic, String text) {
 		return Collections.singletonList(new TextEdit(diagnostic.getRange(), text));
+	}
+
+	@Override
+	public WorkspaceEdit applyCachedResolution(DiagnosticResolutionInfo info) {
+		DiagnosticResolution edit = resolutionIds.remove(info.getResolutionId());
+		return edit == null ? new WorkspaceEdit() : edit.apply();
+	}
+
+	@Override
+	public String cacheResolution(DiagnosticResolution resolution) {
+		String id = UUID.randomUUID().toString();
+		resolutionIds.put(id, resolution);
+		return id;
 	}
 }
